--- a/uicorek/src/main/res/anim/anim_top_in.xml
+++ b/uicorek/src/main/res/anim/anim_top_in.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="250"
-    android:fillAfter="true">
-    <translate
-        android:fromYDelta="-100%"
-        android:toYDelta="0" />
-</set>
+    android:fillAfter="true"
+    android:fromYDelta="-100%"
+    android:interpolator="@android:anim/overshoot_interpolator"
+    android:toYDelta="0" />
