--- a/uicorek/src/main/res/values/values.xml
+++ b/uicorek/src/main/res/values/values.xml
@@ -3,12 +3,13 @@
 
     <!--dialogk-->
     <style name="DialogKStyle" parent="android:style/Theme.Dialog">
-        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+        <!--<item name="android:backgroundDimEnabled">false</item>--><!--模糊-->
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsTranslucent">false</item>
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <!--<item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>-->
     </style>
 
     <style name="DialogKTitleStyle">
