--- a/uicorek/src/main/res/layout/layoutk_empty.xml
+++ b/uicorek/src/main/res/layout/layoutk_empty.xml
@@ -70,7 +70,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/layoutk_empty_btn"
-        style="@style/BtnCancelStyle"
+        style="@style/BtnStyle_Cancel"
         android:text="刷新"
         android:visibility="gone"
         tools:ignore="HardcodedText" />
