--- a/uicorek/src/main/res/values/values.xml
+++ b/uicorek/src/main/res/values/values.xml
@@ -165,12 +165,13 @@
         <item name="android:fontFamily">monospace</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:padding">8dp</item>
         <item name="textKBubble_arrowDirection">up</item>
         <item name="textKBubble_arrowHeight">8dp</item>
         <item name="textKBubble_arrowWidth">16dp</item>
         <item name="textKBubble_bgColor">@android:color/white</item>
         <item name="textKBubble_borderColor">@color/blue_normal</item>
-        <item name="textKBubble_borderWidth">1dp</item>
+        <item name="textKBubble_borderWidth">2dp</item>
         <item name="textKBubble_cornerRadius">6dp</item>
     </style>
 </resources>
