--- a/app/src/main/res/layout/activity_layoutk.xml
+++ b/app/src/main/res/layout/activity_layoutk.xml
@@ -27,11 +27,51 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             app:layoutKInputItem_bottomLineAppearance="@style/LayoutKInputItemStyle_LineAppearance"
-            app:layoutKInputItem_topLineAppearance="@style/LayoutKInputItemStyle_LineAppearance"
             app:layoutKInputItem_hint="请输入"
             app:layoutKInputItem_inputAppearance="@style/LayoutKInputItemStyle_InputAppearance"
             app:layoutKInputItem_inputType="text"
             app:layoutKInputItem_title="示例"
-            app:layoutKInputItem_titleAppearance="@style/LayoutKInputItemStyle_TitleAppearance" />
+            app:layoutKInputItem_titleAppearance="@style/LayoutKInputItemStyle_TitleAppearance"
+            app:layoutKInputItem_topLineAppearance="@style/LayoutKInputItemStyle_LineAppearance" />
+
+        <com.mozhimen.uicorek.layoutk.slider.Slidr
+            android:id="@+id/layoutk_slider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_region_leftColor="@color/blue_normal"
+            app:layoutKSlider_regions_centerText="false"
+            app:layoutKSlider_backgroundColor="@color/black"/>
+
+        <com.mozhimen.uicorek.layoutk.slider.Slidr
+            android:id="@+id/layoutk_slider1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_region_leftColor="@color/blue_dark"
+            app:layoutKSlider_region_rightColor="@color/blue_normal"
+            app:layoutKSlider_step_colorizeAfterLast="true" />
+
+        <com.mozhimen.uicorek.layoutk.slider.Slidr
+            android:id="@+id/layoutk_slider2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_height="10dp"
+            app:layoutKSlider_step_colorizeAfterLast="true"
+            app:layoutKSlider_textBottom_visible="false"
+            app:layoutKSlider_textTop_visible="false" />
+
+        <com.mozhimen.uicorek.layoutk.slider.Slidr
+            android:id="@+id/layoutk_slider_regions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_draw_bubble="false"
+            app:layoutKSlider_region_leftColor="@color/blue_normal"
+            app:layoutKSlider_region_rightColor="@color/black"
+            app:layoutKSlider_regions="true"
+            app:layoutKSlider_regions_centerText="true"
+            app:layoutKSlider_regions_textFollowRegionColor="true" />
     </LinearLayout>
 </layout>
