--- a/app/src/main/res/layout/activity_viewk_views.xml
+++ b/app/src/main/res/layout/activity_viewk_views.xml
@@ -6,8 +6,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,6 +103,12 @@
                     android:layout_height="match_parent"
                     app:viewKSignature_lineWidth="2dp" />
             </androidx.cardview.widget.CardView>-->
+
+            <com.mozhimen.uicorek.viewk.ViewKImageMask
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:src="@mipmap/demo_bg"
+                android:scaleType="centerCrop"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
