--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -108,31 +108,18 @@
 
     <!--layoutk-->
     <declare-styleable name="LayoutKSlider">
-        <attr name="layoutKSlider_layoutHeight" format="dimension|reference" />
-
-        <attr name="layoutKSlider_sliderHeight" format="dimension|reference" />
-        <attr name="layoutKSlider_sliderPaddingHorizontal" format="dimension|reference" />
-        <attr name="layoutKSlider_sliderRegionLeftColor" format="color|reference" />
-        <attr name="layoutKSlider_sliderRegionRightColor" format="color|reference" />
-        <attr name="layoutKSlider_sliderRegionLabelIsShow" format="boolean" />
-        <attr name="layoutKSlider_sliderRegionLabelColor" format="color|reference" />
-        <attr name="layoutKSlider_sliderRegionLabelColorIsFollowRegion" format="boolean" />
-
+        <attr name="layoutKSlider_sliderHeight" format="reference|dimension" />
+        <attr name="layoutKSlider_sliderRodLeftColor" format="color|reference" />
+        <attr name="layoutKSlider_sliderRodRightColor" format="color|reference" />
         <attr name="layoutKSlider_rodColor" format="color|reference" />
+        <attr name="layoutKSlider_rodColorInside" format="reference|color" />
         <attr name="layoutKSlider_rodIsInside" format="boolean" />
         <attr name="layoutKSlider_rodRadius" format="dimension|reference" />
-
-        <attr name="layoutKSlider_labelTopIsShow" format="boolean" />
-        <attr name="layoutKSlider_labelBottomIsShow" format="boolean" />
-        <attr name="layoutKSlider_labelTextColor" format="color|reference" />
-        <attr name="layoutKSlider_labelTopTextSize" format="dimension|reference" />
-        <attr name="layoutKSlider_labelBottomTextSize" format="dimension|reference" />
-        <attr name="layoutKSlider_labelSliderDistance" format="dimension|reference" />
-
-        <attr name="layoutKSlider_sectionCrossLineIsShow" format="boolean" />
-        <attr name="layoutKSlider_sectionCrossLineColor" format="color|reference" />
-        <attr name="layoutKSlider_sectionCrossLineWidth" format="dimension|reference" />
+        <attr name="layoutKSlider_rodRadiusInside" format="dimension|reference" />
+        <attr name="layoutKSlider_rodMinVal" format="float" />
+        <attr name="layoutKSlider_rodMaxVal" format="float" />
     </declare-styleable>
+
     <declare-styleable name="LayoutKEmpty">
         <attr name="layoutKEmpty_icon" format="string|reference" />
         <attr name="layoutKEmpty_image" format="reference" />
