--- a/app/src/main/res/layout/activity_layoutk.xml
+++ b/app/src/main/res/layout/activity_layoutk.xml
@@ -38,7 +38,13 @@
             android:id="@+id/layoutk_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp" />
 
+        <TextView
+            android:id="@+id/layoutk_slider_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:textColor="@color/blue_normal" />
     </LinearLayout>
 </layout>
