--- a/app/src/main/res/layout/activity_layoutk.xml
+++ b/app/src/main/res/layout/activity_layoutk.xml
@@ -26,6 +26,7 @@
         <com.mozhimen.uicorek.layoutk.LayoutKInputItem
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:layout_marginBottom="10dp"
             app:layoutKInputItem_bottomLineAppearance="@style/LayoutKInputItemStyle_LineAppearance"
             app:layoutKInputItem_hint="请输入"
             app:layoutKInputItem_inputAppearance="@style/LayoutKInputItemStyle_InputAppearance"
@@ -40,11 +41,18 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp" />
 
+        <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
+            android:id="@+id/layoutk_slider_inside"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layoutKSlider_rodIsInside="true" />
+
         <TextView
             android:id="@+id/layoutk_slider_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_margin="10dp"
             android:textColor="@color/blue_normal" />
     </LinearLayout>
 </layout>
