--- a/app/src/main/res/layout/activity_layoutk.xml
+++ b/app/src/main/res/layout/activity_layoutk.xml
@@ -52,7 +52,14 @@
             android:id="@+id/layoutk_slider_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
             android:textColor="@color/blue_normal" />
+
+        <com.mozhimen.uicorek.layoutk.LayoutKChipGroup
+            android:id="@+id/layoutk_chips"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/blue_dark"
+            android:padding="10dp" />
     </LinearLayout>
 </layout>
