--- a/uicorek/src/main/res/layout/layoutk_chip_group_item.xml
+++ b/uicorek/src/main/res/layout/layoutk_chip_group_item.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutk_chip_group_item"
     android:layout_width="wrap_content"
-    android:layout_height="20dp"
+    android:layout_height="40dp"
     android:layout_gravity="center_vertical"
     android:ellipsize="end"
     android:maxLength="10"
-    android:singleLine="true"
     android:textColor="@color/blue_normal"
+    android:textSize="13sp"
+    android:textStyle="bold"
     app:checkedIconVisible="false"
     app:chipBackgroundColor="@color/blue_light"
-    app:chipCornerRadius="10dp"
-    app:closeIconVisible="false" />
+    app:chipCornerRadius="20dp"
+    app:closeIconVisible="false"
+    app:rippleColor="@android:color/white" />
