--- a/app/src/main/res/layout/activity_underlayk.xml
+++ b/app/src/main/res/layout/activity_underlayk.xml
@@ -7,7 +7,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".underlayk.UnderlayKActivity">
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BtnStyle"
+            android:onClick="goLogK"
+            android:text="LogK"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/BtnStyle"
