--- a/underlayk/src/main/res/layout/logk_monitor_view.xml
+++ b/underlayk/src/main/res/layout/logk_monitor_view.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="end"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/logk_monitor_view_msg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/black"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/logk_monitor_view_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/black"
-        android:gravity="center"
+        android:gravity="end|top"
         android:text="@string/logk_view_provider_title_close"
         android:textColor="@android:color/white"
         tools:ignore="HardcodedText" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/logk_monitor_view_msg"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:visibility="gone" />
-</LinearLayout>
+</FrameLayout>
