--- a/debugk/src/main/res/layout/debugk_dialog_item.xml
+++ b/debugk/src/main/res/layout/debugk_dialog_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="itemDebugKDialog"
-            type="com.mozhimen.componentk.debugk.mos.DebugKMethodMo" />
+            type="com.mozhimen.debugk.global.mos.DebugKMethodMo" />
     </data>
 
     <LinearLayout
